[Src] PuppetCaCli: Added tests for 'revoke' and 'delete' commands

--- a/tests/docker-compose/puppetserver/conf/auth.conf
+++ b/tests/docker-compose/puppetserver/conf/auth.conf
@@ -24,7 +24,8 @@ authorization: {
                 method: [delete, put]
             }
             allow: [
-              "admin1.mydomain.com"
+              "admin1.mydomain.com",
+              "admin2.mydomain.com"
             ]
             sort-order: 201
             name: "puppetlabs certificate status actions for admin nodes"
